<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin8"
            android:layout_weight="1"
            android:background="@drawable/background_fields"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize28"
                tools:text="0" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin8"
                android:src="@drawable/ic_all_inclusive_black_24dp"
                android:contentDescription="@string/icon_infinity" />

            <TextView
                android:id="@+id/questionsAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize28"
                tools:text="10" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin8"
            android:layout_weight="1"
            android:background="@drawable/background_fields"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin4"
                android:src="@drawable/ic_timer_black_24dp"
                android:contentDescription="@string/icon_time" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize28"
                tools:text="03:54" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin8"
                android:text="@string/select_the_appropriate_country"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize28" />

            <ImageView
                android:contentDescription="@string/flag"
                android:id="@+id/imageFlag"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/china" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <RadioButton
                    android:layout_margin="@dimen/margin4"
                    android:textSize="@dimen/textSize20"
                    tools:text="China"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_margin="@dimen/margin4"
                    android:textSize="@dimen/textSize20"
                    tools:text="China"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_margin="@dimen/margin4"
                    android:textSize="@dimen/textSize20"
                    tools:text="China"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_margin="@dimen/margin4"
                    android:textSize="@dimen/textSize20"
                    tools:text="China"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
           <EditText
               android:visibility="gone"
               android:id="@+id/editText"
               android:hint="@string/write_the_name_of_the_country"
               android:layout_margin="@dimen/margin8"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_margin="@dimen/margin8"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:onClick="onSubmitButtonClicked"
            android:text="@string/submit" />

        <Button
            android:id="@+id/nexButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:onClick="onNextButtonClicked"
            android:text="@string/check" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>